--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "practice-test",
-   "source": "src/index.html",
+  "source": "src/index.html",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+ 
+  "homepage": "https://annetade.github.io/practice-test/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.12.0"
+  },
+  "dependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
